--- a/backend/config.php.template
+++ b/backend/config.php.template
@@ -1,6 +1,6 @@
 <?php
 //main
-$config['base_url']		= '';
+$config['base_url']		= ''; // site base url
 $config['template_dir'] = 'backend/templates';
 $config['photos_dir'] 	= 'resources/photos/';
 
@@ -11,14 +11,14 @@ $config['db_pass'] = '';
 $config['db_name'] = '';
 
 //facebook config
-$config['facebook_app_id'] 		= '';
-$config['facebook_app_secret'] 	= '';
+$config['facebook_app_id'] 		= ''; // facebook app id
+$config['facebook_app_secret'] 	= ''; // facebook app secret
 $config['facebook_return_url'] 	= $config['base_url'] . 'return/facebook/';
 $config['facebook_scope'] 		= array('public_profile','user_photos');
 
 //instagram config
-$config['insta_app_id']			= '';
-$config['insta_app_secret']		= '';
+$config['insta_app_id']			= ''; // client id
+$config['insta_app_secret']		= ''; // client secret
 $config['insta_return_url'] 	= $config['base_url'] . 'return/instagram/';
 $config['insta_scope']			= 'basic';
 
